<resources>
    <string name="app_name">ChatOn</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>

    <string name="login_successful">Successful !</string>
    <string name="login_failed">Failed !</string>
    <string name="login_invalid_email">Invalid email</string>
    <string name="login_invalid_username">Please enter an username</string>
    <string name="login_invalid_password">Invalid password. Minimum length is 6 characters</string>
    <string name="not_registered_sign_up">Not registered ? <b>Sign up</b></string>
    <string name="passwords_not_matching">Passwords don\'t match together</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="add_a_new_conversation">Add a new conversation</string>
    <string name="add_name">Add name</string>
    <string name="chat_added">Chat added !</string>
    <string name="required_field">This field is required</string>
    <string name="type_text_here">Type text here</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="created_at">Created at %s</string>
    <string name="informations_updated">Informations updated</string>

    <!-- Menu -->
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Profile -->
    <string name="add_a_cover_photo">Add a cover photo</string>
    <string name="update_informations">Update informations</string>
    <string name="my_profile">My profile</string>

    <!-- Chat settings -->
    <string name="chat_settings_chat_deleted">Chat deleted</string>
    <string name="chat_settings_delete_chat">Delete and quit</string>
    <string name="edit_cover">Edit cover</string>
    <string name="chat_name">Chat name</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="chat_settings">Chat settings</string>
</resources>
